src/test/deca/syntax/valid/classe_extends.deca
// Description:
//    on test extends
//
// Resultats:
//   ok

class A {
}

class B extends A {
}

class C extends B{
}
