src/test/deca/syntax/invalid/mauvais_asm_3.deca
// Description:
//    asm sans type ni ident
//
// Resultats:
//   

class A extends {
	asm (a);	
}